# US_stocks_swing_model

./: .gitattributes  .gitignore  AGENTS.md  CODEX_HANDOFF.md  COLAB_README.md  README.md  pyproject.toml  requirements.txt
configs/: baseline_features.yaml  baseline_model.yaml  data_schema.yaml  execution_costs.yaml  expanded_features.yaml  feature_selection.yaml  gates.yaml  long_only_h5_phase1_features.yaml  long_only_h5_phase1_no_momentum_trend_features.yaml  long_only_h5_phase1_vol_liq_only_features.yaml  long_only_h5_phase2_core_features.yaml  long_only_h5_vol20_60_only_features.yaml  long_only_h5_vol_norm60_target_features.yaml  long_only_h5_vol_norm60_target_model.yaml  project.yaml  wfa.yaml
docs/: data_foundation_evidence_inputs.md  raw_parquet_layout_policy.md  stage17_manual_option_chain_mapping.md
scripts/: audit_baseline_h5_remediation.py  audit_gap_impact.py  audit_validation_diagnostics.py  execution.py  experimental_build_long_only_h5_phase1_features.py  experimental_build_long_only_h5_phase1_no_momentum_trend_features.py  experimental_build_long_only_h5_phase1_vol_liq_only_features.py  experimental_build_long_only_h5_phase2_core_features.py  experimental_build_long_only_h5_vol20_60_only_features.py  experimental_build_long_only_h5_vol_norm60_target_features.py  experimental_build_target_h5_vol_norm60.py  experimental_compare_long_only_h5_ablation.py  experimental_run_long_only_h5_phase1_no_momentum_trend_wfa.py  experimental_run_long_only_h5_phase1_vol_liq_only_wfa.py  experimental_run_long_only_h5_phase1_wfa.py  project_config.py  (+21 more)
(+140 files in other folders)
