[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-project-daily"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "pyarrow",
  "PyYAML",
  "numpy",
  "polars",
  "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
